boot-freemarker demo